content/vault/v1.21.x/content/docs/deploy/kubernetes/kms/configuration.mdx
---
layout: docs
page_title: Vault Kubernetes Key Management parameters
description: Configuration parameters for Vault Kubernetes Key Management.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-03-17T12:26:00-07:00
last_modified: 2026-03-20T22:19:18.000Z
# END AUTO GENERATED METADATA
---

# Vault Kubernetes Key Management parameters

@include '../../../global/partials/alerts/status/beta.mdx'

Configure the `vault-kube-kms` process to control how it exposes the KMS
v2 gRPC endpoint to Kubernetes, connects to Vault, authenticates, selects a
Transit key, and emits logs and metrics.

The `vault-kube-kms` process reads and validates the configuration at startup using
command-line flags. If you start Vault Kubernetes with missing or invalid
required parameters, the process exits with an error.


## Connection parameters

- `--listen-address` (`string : "unix:///tmp/vault-kube-kms.socket"`)  
  Unix domain socket address where the `vault-kube-kms` process listens for requests from
  the Kubernetes API server. The `kube-apiserver` process must have filesystem
  access to the socket to communicate with the `vault-kube-kms` process.  
  **Environment variable**: `VAULT_KUBE_KMS_LISTEN_ADDRESS`  


- `--vault-address` (`string : <required>`)  
  HTTP(S) address where the `vault-kube-kms` process can reach your Vault
  server to authenticate and perform cryptographic operations with the Transit
  plugin.  
  **Environment variable**: `VAULT_KUBE_KMS_VAULT_ADDRESS`


- `--vault-namespace` (`string : ""`)  
  Vault namespace where you have the Transit plugin mounted. Leave
  `vault-namespace` unset if you have the plugin mounted in the root namespace.
  If you use namepaces with your Vault deployment, you must provide the plugin
  namespace with `vault-namespace` rather than including it in the mount path.  
  **Environment variable**: `VAULT_KUBE_KMS_VAULT_NAMESPACE`


- `--transit-mount` (`string: "transit"`)  
  Mount path to the Vault Transit plugin. The `vault-kube-kms` process uses
  `transit-mount` to craft Vault requests to encrypt and decrypt data encryption
  keys (DEKs).  
  **Environment variable**: `VAULT_KUBE_KMS_TRANSIT_MOUNT`


- `--transit-key` (`string: ""`)  
  Name of an existing key in the Transit plugin that the `vault-kube-kms` 
  process should use for crafting requests to Vault during DEK encryption 
  and decryption. You must have a Vault policy configured that grants
  the `vault-kube-kms` process permission to access the named key.  
  **Environment variable**: `VAULT_KUBE_KMS_TRANSIT_KEY`


- `--tls-ca-file` (`string: ""`)  
  Path to a CA certificate file that the `vault-kube-kms` process can 
  use to validate the TLS certificate used by Vault. Leave `tls-ca-file`
  unset to use the system trust store.  
  **Environment variable**: `VAULT_KUBE_KMS_TLS_CA_FILE`


- `--tls-skip-verify` (`bool: false`)  
  Tells the `vault-kube-kms` process to skip TLS certificate
  verification when connecting to Vault in non-production environments.  
  **Environment variable**: `VAULT_KUBE_KMS_TLS_SKIP_VERIFY`


- `--tls-sni` (`string: ""`)  
  SNI (server name indication) used by the `vault-kube-kms` process
  when connecting to Vault via TLS.  
  **Environment variable**: `VAULT_KUBE_KMS_TLS_SNI`



## Authentication parameters

- `--auth-method` (`string: "appRole"`)  
  Vault authentication method used by the `vault-kube-kms` process.
  Must be one of:
    
    - appRole - Authentication to Vault withAppRole  
  
  **Environment variable**: `VAULT_KUBE_KMS_AUTH_METHOD`

- `--auth-mount` (`string: "approle"`)  
  Mount path to the Vault auth method plugin that the `vault-kube-kms` 
  process uses to authenticate to Vault.
  **Environment variable**: `VAULT_KUBE_KMS_AUTH_MOUNT`


### AppRole parameters

If you use AppRole authentication, you must include the following parameters:

- `--approle-role-id` (`string: ""`)  
  Non-sensitive AppRole role ID that the `vault-kube-kms` process uses
  to identify itself when authenticating to Vault.  
  **Environment variable**: `VAULT_KUBE_KMS_APPROLE_ROLE_ID`


- `--approle-secret-id-path` (`string: ""`)  
  Filesystem path to a file containing the sensitive AppRole secret ID
  associated with `approle-role-id`. Always protect the target file with
  appropriate filesystem permissions. The `vault-kube-kms` process reads
  the secret ID from `approle-secret-id-path` at startup.  
  **Environment variable**: `VAULT_KUBE_KMS_APPROLE_SECRET_ID_PATH`



## Logging, metrics, and telemetry parameters ((#metrics))

- `--zap-log-level` (`string: "info"`)
  Log verbosity level. Can be one of 'debug', 'info', 'error', or 'panic', or any integer value > 0 which corresponds to custom debug levels of increasing verbosity. See the [controller-runtime zap package documentation](https://pkg.go.dev/sigs.k8s.io/controller-runtime/pkg/log/zap) for more details.

    - **debug** - Development mode logging with high-level details
    - **info** - Production mode logging with general operational context (default)
    - **error** - Log only errors and critical failures
    - **panic** - Log only panic-level events
    - **Integer > 0** - Custom debug levels with increasing verbosity (e.g., 1, 2, 3...)


- `--metrics-port` (`int: 9090`)  
  TCP port local to the `vault-kube-kms` process that exposes a Prometheus-compatible
  `/metrics` endpoint. The endpoint binds to `localhost`. Leave `metrics-port`
  if you do not want the `vault-kube-kms` process to expose a metrics endpoint.  
  **Environment variable**: `VAULT_KUBE_KMS_METRICS_PORT`


- `--enable-runtime-metrics` (`bool: false`)  
  Tells the `vault-kube-kms` process to expose Go runtime and process-level metrics
  through the `/metrics` endpoint. Runtime metrics include garbage collection
  statistics, goroutine counts, and memory usage.  
  **Environment variable**: `VAULT_KUBE_KMS_ENABLE_RUNTIME_METRICS`



## Minimal configuration example

Basic example `ConfigMap`:

```yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: vault-kms-config
data:
  listen-address:         "/var/run/kms/vault-kms.sock"
  vault-address:          "https://vault.example.com:8200"
  transit-mount:          "transit"
  transit-key:            "kubernetes-etcd"
  auth-method:            "approle"
  approle-role-id:        "example-role-id"
  approle-secret-id-path: "/var/run/secrets/vault/secret-id"
```