content/vault/v2.x/content/docs/deploy/kubernetes/kms/configuration.mdx
---
layout: docs
page_title: Vault Kubernetes Key Management parameters
description: Configuration parameters for Vault Kubernetes Key Management.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-03-17T12:26:00-07:00
last_modified: 2026-03-20T22:19:18.000Z
# END AUTO GENERATED METADATA
---

# Vault Kubernetes Key Management parameters

{/* TODO: Replace with GA banner once confirmed with docs team — @include '../../../global/partials/alerts/status/ga.mdx' */}
{/* @include '../../../global/partials/alerts/status/beta.mdx' */}

Configure the `vault-kube-kms` process to control how it exposes the KMS
v2 gRPC endpoint to Kubernetes, connects to Vault, authenticates, selects a
Transit key, and emits logs and metrics.

The `vault-kube-kms` process reads and validates the configuration at startup using
command-line flags. If you start Vault Kubernetes with missing or invalid
required parameters, the process exits with an error.


## Connection parameters

- `--listen-address` (`string : "unix:///tmp/vault-kube-kms.socket"`)  
  Unix domain socket address where the `vault-kube-kms` process listens for requests from
  the Kubernetes API server. The `kube-apiserver` process must have filesystem
  access to the socket to communicate with the `vault-kube-kms` process.  
  **Environment variable**: `VAULT_KUBE_KMS_LISTEN_ADDRESS`  


- `--vault-address` (`string : <required>`)  
  HTTP(S) address where the `vault-kube-kms` process can reach your Vault
  server to authenticate and perform cryptographic operations with the Transit
  plugin.  
  **Environment variable**: `VAULT_KUBE_KMS_VAULT_ADDRESS`


- `--vault-namespace` (`string : ""`)  
  Vault namespace where the Transit secrets engine is mounted. Leave
  `vault-namespace` unset if the Transit engine is in the root namespace.
  When `--vault-auth-namespace` is not set, `vault-namespace` is also used
  as the namespace for AppRole authentication.
  **Environment variable**: `VAULT_KUBE_KMS_VAULT_NAMESPACE`


- `--vault-auth-namespace` (`string : ""`)
  Vault namespace used exclusively for AppRole authentication. When set,
  the `vault-kube-kms` process authenticates in this namespace and performs
  Transit operations in the namespace specified by `--vault-namespace`. Leave
  unset when the AppRole mount and the Transit engine share the same namespace
  (the common case). Use this flag only when Vault is configured for
  [cross-namespace access](https://developer.hashicorp.com/vault/docs/enterprise/namespaces/configure-cross-namespace-access).
  **Environment variable**: `VAULT_KUBE_KMS_VAULT_AUTH_NAMESPACE`


`--vault-key-path` (`string: <required>`)  
  Path to the Transit encryption key in Vault, in the format
  `<mount>/keys/<key-name>` (for example, `transit/keys/my-key`). The
  `vault-kube-kms` process uses this single path to craft encrypt and decrypt
  requests for data encryption keys (DEKs). You must have a Vault policy that
  grants the `vault-kube-kms` process permission to read, encrypt, and decrypt
  the named key. The path is validated at startup to prevent path traversal
  attacks.  
  **Environment variable**: `VAULT_KUBE_KMS_VAULT_KEY_PATH`

- `--tls-ca-file` (`string: ""`)  
  Path to a CA certificate file that the `vault-kube-kms` process can 
  use to validate the TLS certificate used by Vault. Leave `tls-ca-file`
  unset to use the system trust store.  
  **Environment variable**: `VAULT_KUBE_KMS_TLS_CA_FILE`


- `--tls-skip-verify` (`bool: false`)  
  Tells the `vault-kube-kms` process to skip TLS certificate
  verification when connecting to Vault in non-production environments.  
  **Environment variable**: `VAULT_KUBE_KMS_TLS_SKIP_VERIFY`


- `--tls-sni` (`string: ""`)
  SNI (server name indication) used by the `vault-kube-kms` process
  when connecting to Vault via TLS.
  **Environment variable**: `VAULT_KUBE_KMS_TLS_SNI`


- `--vault-connection-timeout` (`string: "30s"`)
  Timeout for establishing a connection to Vault in duration notation (e.g., '15s', '30s').
  **Environment variable**: `VAULT_KUBE_KMS_VAULT_CONNECTION_TIMEOUT`



## Authentication parameters

The `vault-kube-kms` process currently supports AppRole authentication only.

### AppRole parameters

You must include the following parameters for AppRole authentication:

- `--auth-mount` (`string: "approle"`)
  Mount path to the Vault auth method plugin that the `vault-kube-kms`
  process uses to authenticate to Vault. Required.
  When using cross-namespace auth,
  this mount is looked up in the namespace specified by `--vault-auth-namespace`.
  **Environment variable**: `VAULT_KUBE_KMS_AUTH_MOUNT`


- `--approle-role-id` (`string: <required>`)
  Non-sensitive AppRole role ID that the `vault-kube-kms` process uses
  to identify itself when authenticating to Vault.
  **Environment variable**: `VAULT_KUBE_KMS_APPROLE_ROLE_ID`


- `--approle-secret-id-path` (`string: <required>`)
  Filesystem path to a file containing the sensitive AppRole secret ID
  associated with `approle-role-id`. Always protect the target file with
  appropriate filesystem permissions. The `vault-kube-kms` process reads
  the secret ID from `approle-secret-id-path` at startup.
  **Environment variable**: `VAULT_KUBE_KMS_APPROLE_SECRET_ID_PATH`



## Logging, metrics, and telemetry parameters ((#metrics))

- `--zap-log-level` (`string: "info"`)
  Log verbosity level. Can be one of 'debug', 'info', 'error', or 'panic', or specific integer values for custom verbosity levels. See the [controller-runtime zap package documentation](https://pkg.go.dev/sigs.k8s.io/controller-runtime/pkg/log/zap) for more details.

    - **debug** - Development mode logging with high-level details
    - **info** - Production mode logging with general operational context (default)
    - **error** - Log only errors and critical failures
    - **panic** - Log only panic-level events
    - **4** - Warning level logging
    - **5** - Debug level logging
    - **6** - Trace level logging (most verbose)


- `--metrics-port` (`int: 9090`)
  TCP port local to the `vault-kube-kms` process that exposes a Prometheus-compatible
  `/metrics` endpoint. The endpoint binds to `localhost`. Set to 0 or a negative value
  to disable the metrics endpoint.
  **Environment variable**: `VAULT_KUBE_KMS_METRICS_PORT`


- `--disable-runtime-metrics` (`bool: false`)
  Tells the `vault-kube-kms` process to disable Go runtime and process-level metrics
  in the `/metrics` endpoint. When set to false (default), runtime metrics including garbage collection
  statistics, goroutine counts, and memory usage are exposed.
  **Environment variable**: `VAULT_KUBE_KMS_DISABLE_RUNTIME_METRICS`

- `--health-port` (`int: 8081`)
  TCP port on all interfaces (`0.0.0.0`) where the `vault-kube-kms` process
  exposes HTTP health check endpoints for use as Kubernetes liveness and
  readiness probes:

    - `/healthz` — liveness probe; always returns `200 OK` as long as the
      `vault-kube-kms` process is alive and the HTTP server is responding.
      This endpoint does not check Vault connectivity or gRPC socket status.
    - `/readyz` — readiness probe; returns `200 OK` only when the gRPC KMS
      server has fully initialised and is actively serving requests. Returns
      `500` with the message `"plugin is not ready"` before the gRPC server
      starts, and again if the gRPC server stops for any reason (including
      a Unix socket failure), until the process is restarted.

  Set to `0` or a negative value to disable health check endpoints.
  **Environment variable**: `VAULT_KUBE_KMS_HEALTH_PORT`

<Note title="systemd deployments">

When deploying as a systemd service on bare-metal nodes, set configuration
via environment variables in `/etc/vault-kube-kms/vault-kube-kms.env` instead
of CLI flags. Every parameter listed above has a corresponding environment
variable shown under **Environment variable**. See
[Set up Vault Kubernetes Key Management](/vault/docs/deploy/kubernetes/kms/setup#systemd-deployment-bare-metal)
for the full installation steps.

When running as a standalone binary (not managed by a systemd unit), the
`vault-kube-kms` process automatically writes log entries directly to the
systemd journal socket. No additional configuration is required. Logs are
queryable via:

```shell-session
$ journalctl -t vault-kube-kms
```

When systemd manages the process as a service unit, it sets the
`$JOURNAL_STREAM` environment variable and connects stdout directly to
journald — no extra wiring is applied. On hosts without systemd (for example
macOS or vanilla Docker containers), journal writing is skipped automatically.

</Note>

## Minimal configuration example

Basic example `ConfigMap`:

```yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: vault-kms-config
data:
  listen-address:         "/var/run/kms/vault-kms.sock"
  vault-address:          "https://vault.example.com:8200"
  vault-key-path:         "transit/keys/kubernetes-etcd"
  approle-role-id:        "example-role-id"
  approle-secret-id-path: "/var/run/secrets/vault/secret-id"
```

## Cross-namespace configuration example

Use this configuration when AppRole authentication lives in a different Vault
namespace from the Transit secrets engine. This requires Vault Enterprise with
[cross-namespace access](https://developer.hashicorp.com/vault/docs/enterprise/namespaces/configure-cross-namespace-access)
configured.

```yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: vault-kms-config
data:
  listen-address:         "/var/run/kms/vault-kms.sock"
  vault-address:          "https://vault.example.com:8200"
  vault-namespace:        "transit-ns"
  vault-auth-namespace:   "auth-ns"
  vault-key-path:         "transit/keys/kubernetes-etcd"
  auth-method:            "approle"
  approle-role-id:        "example-role-id"
  approle-secret-id-path: "/var/run/secrets/vault/secret-id"
```

In this example:
- `vault-namespace` (`transit-ns`) is the Vault namespace where the Transit engine is mounted.
- `vault-auth-namespace` (`auth-ns`) is the Vault namespace where the AppRole auth method is mounted.

When `vault-auth-namespace` is omitted, both operations use the namespace set by `vault-namespace`.